clusters/production/nextcloud/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
    owner: platform
  annotations:
    linkerd.io/inject: enabled
