clusters/production/nextcloud/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.primed.io`)
      kind: Rule
      middlewares:
        - name: tailscale-ipallowlist
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: nextcloud-tls
